@@ -661,29 +661,12 @@ name|value
 decl_stmt|;
 for|for
 control|(
-name|int
-name|i
-init|=
-literal|0
-init|;
-name|i
-operator|<
-name|bindings
-operator|.
-name|length
-condition|;
-name|i
-operator|++
-control|)
-block|{
 name|ParameterBinding
 name|b
-init|=
+range|:
 name|bindings
-index|[
-name|i
-index|]
-decl_stmt|;
+control|)
+block|{
 if|if
 condition|(
 name|b
@@ -775,9 +758,6 @@ else|else
 block|{
 name|value
 operator|=
-operator|new
-name|StringBuilder
-argument_list|(
 name|b
 operator|.
 name|getValue
@@ -788,15 +768,9 @@ argument_list|()
 operator|.
 name|getName
 argument_list|()
-argument_list|)
-operator|.
-name|append
-argument_list|(
+operator|+
 literal|"@"
-argument_list|)
-operator|.
-name|append
-argument_list|(
+operator|+
 name|System
 operator|.
 name|identityHashCode
@@ -806,10 +780,6 @@ operator|.
 name|getValue
 argument_list|()
 argument_list|)
-argument_list|)
-operator|.
-name|toString
-argument_list|()
 expr_stmt|;
 block|}
 name|List
