@@ -129,6 +129,16 @@ name|org
 operator|.
 name|junit
 operator|.
+name|Before
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|junit
+operator|.
 name|Test
 import|;
 end_import
@@ -140,18 +150,6 @@ operator|.
 name|util
 operator|.
 name|Collections
-import|;
-end_import
-
-begin_import
-import|import static
-name|org
-operator|.
-name|hamcrest
-operator|.
-name|CoreMatchers
-operator|.
-name|is
 import|;
 end_import
 
@@ -172,16 +170,19 @@ specifier|public
 class|class
 name|CompactSlf4jJdbcEventLoggerTest
 block|{
+specifier|private
+name|CompactSlf4jJdbcEventLogger
+name|logger
+decl_stmt|;
 annotation|@
-name|Test
+name|Before
 specifier|public
 name|void
-name|logWithCompact_Union
+name|createLogger
 parameter_list|()
 block|{
-name|CompactSlf4jJdbcEventLogger
-name|compactSl4jJdbcEventLogger
-init|=
+name|logger
+operator|=
 operator|new
 name|CompactSlf4jJdbcEventLogger
 argument_list|(
@@ -194,18 +195,19 @@ name|emptyMap
 argument_list|()
 argument_list|)
 argument_list|)
-decl_stmt|;
-name|DbAttributeBinding
-index|[]
-name|bindings
-init|=
-name|createBindings
-argument_list|()
-decl_stmt|;
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+specifier|public
+name|void
+name|compactSimpleSql
+parameter_list|()
+block|{
 name|String
 name|processesSelectSql
 init|=
-name|compactSl4jJdbcEventLogger
+name|logger
 operator|.
 name|trimSqlSelectColumns
 argument_list|(
@@ -227,41 +229,68 @@ operator|+
 literal|"WHERE t1.NAME LIKE ?"
 argument_list|)
 expr_stmt|;
-name|StringBuilder
-name|buffer
+block|}
+annotation|@
+name|Test
+specifier|public
+name|void
+name|compactNotSelect
+parameter_list|()
+block|{
+name|String
+name|processedSql
 init|=
-operator|new
-name|StringBuilder
-argument_list|()
+name|logger
+operator|.
+name|trimSqlSelectColumns
+argument_list|(
+literal|"UPDATE test SET name = 'abc', value = 123 WHERE id = 321"
+argument_list|)
 decl_stmt|;
-name|compactSl4jJdbcEventLogger
-operator|.
-name|appendParameters
+name|assertEquals
 argument_list|(
-name|buffer
+literal|"UPDATE test SET name = 'abc', value = 123 WHERE id = 321"
 argument_list|,
-literal|"bind"
-argument_list|,
-name|bindings
+name|processedSql
 argument_list|)
 expr_stmt|;
-name|assertThat
-argument_list|(
-name|buffer
+block|}
+annotation|@
+name|Test
+specifier|public
+name|void
+name|compactSubSelect
+parameter_list|()
+block|{
+name|String
+name|processedSql
+init|=
+name|logger
 operator|.
-name|toString
-argument_list|()
-argument_list|,
-name|is
+name|trimSqlSelectColumns
 argument_list|(
-literal|"[bind: 1->t0.NAME: {'', 52, 'true'}, 2->t0.F_KEY1: 'true']"
+literal|"INSERT INTO test1 SELECT column1, column2, column3, column4, column5, column6 FROM test2 WHERE id = 321"
 argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|"INSERT INTO test1 SELECT (6 columns) FROM test2 WHERE id = 321"
+argument_list|,
+name|processedSql
 argument_list|)
 expr_stmt|;
+block|}
+annotation|@
+name|Test
+specifier|public
+name|void
+name|compactUnion
+parameter_list|()
+block|{
 name|String
 name|processedUnionSql
 init|=
-name|compactSl4jJdbcEventLogger
+name|logger
 operator|.
 name|processUnionSql
 argument_list|(
@@ -288,12 +317,10 @@ operator|+
 literal|"t1 ON (t0.F_KEY1 = t1.KEY1 AND t0.F_KEY2 = t1.KEY2) WHERE t1.NAME LIKE ?"
 argument_list|)
 decl_stmt|;
-name|assertThat
+name|assertEquals
 argument_list|(
 name|processedUnionSql
 argument_list|,
-name|is
-argument_list|(
 literal|"SELECT t0.NAME AS ec0_0, t0.F_KEY1 AS ec0_1, t0.PKEY AS ec0_3 FROM COMPOUND_FK_TEST t0 "
 operator|+
 literal|"INNER JOIN COMPOUND_PK_TEST t1 ON (t0.F_KEY1 = t1.KEY1 AND t0.F_KEY2 = t1.KEY2) "
@@ -302,20 +329,32 @@ literal|"WHERE t1.NAME LIKE ? UNION ALL SELECT t0.NAME AS ec0_0, t0.F_KEY1 AS ec
 operator|+
 literal|"FROM COMPOUND_FK_TEST t0 INNER JOIN COMPOUND_PK_TEST t1 ON (t0.F_KEY1 = t1.KEY1 AND t0.F_KEY2 = t1.KEY2) "
 operator|+
-literal|"WHERE t1.NAME LIKE ? UNION all SELECT (4 columns) FROM COMPOUND_FK_TEST t0 INNER JOIN COMPOUND_PK_TEST t1 ON (t0.F_KEY1 = t1.KEY1 AND t0.F_KEY2 = t1.KEY2) "
+literal|"WHERE t1.NAME LIKE ? UNION all SELECT (4 columns) FROM COMPOUND_FK_TEST t0 "
+operator|+
+literal|"INNER JOIN COMPOUND_PK_TEST t1 ON (t0.F_KEY1 = t1.KEY1 AND t0.F_KEY2 = t1.KEY2) "
 operator|+
 literal|"WHERE t1.NAME LIKE ?"
 argument_list|)
-argument_list|)
 expr_stmt|;
 block|}
-specifier|private
-name|DbAttributeBinding
-index|[]
-name|createBindings
+annotation|@
+name|Test
+specifier|public
+name|void
+name|compactBindings
 parameter_list|()
 block|{
-return|return
+name|StringBuilder
+name|buffer
+init|=
+operator|new
+name|StringBuilder
+argument_list|()
+decl_stmt|;
+name|DbAttributeBinding
+index|[]
+name|bindings
+init|=
 operator|new
 name|DbAttributeBinding
 index|[]
@@ -376,7 +415,28 @@ name|BooleanType
 argument_list|()
 argument_list|)
 block|}
-return|;
+decl_stmt|;
+name|logger
+operator|.
+name|appendParameters
+argument_list|(
+name|buffer
+argument_list|,
+literal|"bind"
+argument_list|,
+name|bindings
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|buffer
+operator|.
+name|toString
+argument_list|()
+argument_list|,
+literal|"[bind: 1->t0.NAME: {'', 52, 'true'}, 2->t0.F_KEY1: 'true']"
+argument_list|)
+expr_stmt|;
 block|}
 specifier|private
 name|DbAttributeBinding
@@ -422,13 +482,6 @@ argument_list|(
 name|position
 argument_list|)
 expr_stmt|;
-if|if
-condition|(
-name|type
-operator|!=
-literal|null
-condition|)
-block|{
 name|dbAttributeBinding
 operator|.
 name|setExtendedType
@@ -436,7 +489,6 @@ argument_list|(
 name|type
 argument_list|)
 expr_stmt|;
-block|}
 return|return
 name|dbAttributeBinding
 return|;
